--- a/src/components/Shelf.astro
+++ b/src/components/Shelf.astro
@@ -1,7 +1,7 @@
 ---
 import Card from "./Card.astro";
 
-const { title, imgStyle } = Astro.props;
+const { title, type } = Astro.props;
 ---
 
 <section>
@@ -16,43 +16,43 @@ const { title, imgStyle } = Astro.props;
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=1&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=2&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=3&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=4&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=5&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=6&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
     <Card
       title="Astro"
       body="Build faster websites with less client-side Javascript."
       imgPath="https://via.assets.so/album.png?id=7&q=95&w=360&h=360&fit=fill"
-      imgStyle={imgStyle}
+      type={type}
     />
   </ul>
 
