--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Shelf from "../components/Shelf.astro";
     <Header />
     <Sidebar />
     <main>
-      <Shelf title="Popular artists" imgStyle="rounded" />
+      <Shelf title="Popular artists" type="artist" />
       <Shelf title="Popular albums" />
       <Shelf title="Popular radio" />
     </main>
