--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,13 @@ if (type === "artist") {
       <a href="#0">{title}</a>
     </h3>
     <figure>
-      <img class={imgStyle} src={imgPath} alt="" height="350" width="350" />
+      <img
+        class={imgStyle}
+        src="/images/ux.jpeg"
+        alt=""
+        height="350"
+        width="350"
+      />
       <button class="play-btn">
         <svg viewBox="0 0 24 24"
           ><path
